flask-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-hello-world
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-hello-world
  template:
    metadata:
      labels:
        app: flask-hello-world
    spec:
      containers:
        - name: flask-hello-world
          image: flask-hello-world
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: flask-hello-world
spec:
  selector:
    app: flask-hello-world
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
