traefik-whoamiv2.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: default
  name: whoamiv2
  labels:
    app: whoamiv2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoamiv2
  template:
    metadata:
      labels:
        app: whoamiv2
    spec:
      containers:
        - name: whoamiv2
          image: traefik/whoami
          ports:
            - name: web
              containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: whoamiv2
spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
  selector:
    app: whoamiv2
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: simpleingressroute2
  namespace: default
spec:
  entryPoints:
    - web
  routes:
  - match: PathPrefix(`/notls2`)
    kind: Rule
    services:
    - name: whoamiv2
      port: 80
